# AdvancedVulkanRendering

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  DX12_CHANGES.md  FBX_Skeletal_Animation_Changes.md  GPU_Driven_Optimization.md  ScatterVolume.md  build_thirdparty.py  validationerror
Src/: AssetLoader.cpp  CMakeLists.txt  Camera.cpp  FbxLoader.cpp  GpuScene.cpp  Light.cpp  Makefile  ObjLoader.cpp  Raytracing.cpp  ScatteringVolume.cpp  Shadow.cpp  SkinnedMesh.cpp  TAA_ResolvePass_Changes.md  VulkanSetup.cpp  Window.cpp  cmake_install.cmake
Src/DX12/: DX12DescriptorHeap.cpp  DX12DescriptorHeap.h  DX12GpuScene.cpp  DX12GpuScene.h  DX12ResourceHelper.h  DX12Setup.cpp  DX12Setup.h
Src/Include/: AssetLoader.h  Camera.h  Common.h  FbxLoader.h  Frustum.h  GpuScene.h  Light.h  Matrix.h  ObjLoader.h  Plane.h  Primitives.h  Raytracing.h  ScatteringVolume.h  Shadow.h  SkinnedMesh.h  VulkanCompat.h  VulkanSetup.h
android/: ANDROID_PORT.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/jni/: CMakeLists.txt
docs/: RayTracing_Changes.md  per-frame-resource-synchronization.md
shaders/: ClearDebugView.cs.spv  ClearIndices.cs.spv  CoarseCull.cs.spv  TraditionalCull.cs.spv  commonstruct.hlsl  compile_shaders.bat  compile_shaders_dx12.bat  deferredPointLighting.ps.spv  deferredPointLighting.vs.spv  deferredlighting.hlsl  deferredlighting.ps.spv  deferredlighting.vs.spv  drawcluster.base.ps.spv  drawcluster.depth.ps.spv  drawcluster.forward.ps.spv  drawcluster.frag  drawcluster.hlsl  drawcluster.ps.spv  drawcluster.scc.ps.spv  drawcluster.vs.spv  drawoccluders.hlsl  drawoccluders.vs.spv  edward.hlsl  edward.ps.spv  edward.vert.spv  edward.vs.spv  frag.spv  fragV2.spv  geom.hlsl  gpucull.hlsl  gpucull.scc.spv  hiz.hlsl  lightculling.hlsl  lighting.hlsl  makeshaders.sh  makeshaders_dxc.sh  occluders.vert  occluders.vs.spv  pointspotlight.hlsl  resolve.hlsl  (+12 more)
